<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright (c) 2010-2011, The MiCode Open Source Community (www.micode.net)

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- application name and title of error dialogs-->
    <string name="app_name">Sound Recorder</string>

    <!-- Screen title before and during recording -->
    <!-- Screen title after recording -->
    <!-- Screen title while playing back a recording -->
    <!-- Label shown during recording -->
    <string name="recording">Recording</string>
    <!-- Label shown when the recording is stopped for a reason other than the user stopping it (e.g. the sd card was removed) -->
    <string name="recording_stopped">Recording stopped</string>
    <!-- label shown when there is not enough space to record something -->
    <string name="storage_is_full">Storage is full</string>
    <!-- label shown when the recording has reached maximum allowed file size -->
    <string name="max_length_reached">Maximum length reached</string>
    <!-- label shown when there is no sd card available to record to -->
    <string name="insert_sd_card">SD card is required</string>
    <!-- label shown when there is more than 1 minute but less than 9 minutes of space left to record -->
    <!-- label shown when there is less than 1 minute of space left to record -->

    <!-- button to accept the current recording and return it to the caller -->
    <!-- button to discard the current recording and return to the caller -->
    <!-- acknowlegement button in a number of dialogs -->
    <string name="button_ok">OK</string>
    <!-- Do not translate. Format of the timer that shows how much has been recorded so far -->
    <string name="timer_format"><xliff:g id="format">%02d</xliff:g>:<xliff:g id="format">%02d</xliff:g></string>
    <!-- label shown before the user has recorded anything -->

    <!-- the name under which recordings will be visible in the media database is formatted like this -->
    <string name="audio_db_title_format"><xliff:g id="format">yyyy-MM-dd HH:mm:ss</xliff:g></string>
    <!-- all recordings will show up in the media database with this 'artist' name -->
    <string name="audio_db_artist_name">Your recordings</string>
    <!-- all recordings will show up in the media database with this 'album' name -->
    <string name="audio_db_album_name">Audio recordings</string>
    <!-- all recordings will show up in the media database in a playlist with this name -->
    <string name="audio_db_playlist_name">My recordings</string>
    <!-- shown as the message in a dialog when an error occured because of an error accessing the sd card -->
    <string name="error_sdcard_access">Unable to access external or internal storage</string>
    <!-- shown as the message in a dialog when the app encountered an unspecified internal error -->
    <string name="error_app_internal">Internal application error</string>
    <!-- shown as the message in a dialog when the recording could not be added to the media database -->
    <string name="error_mediadb_new_record">Unable to save recorded audio</string>

    <!-- add for libra begin -->
    <string name="default_record_name">untitled record</string>
    <string name="menu_view_record_list">View record list</string>
    <string name="menu_setting">Settings</string>
    <string name="delete_dialog_title">Do you want to delete current record?</string>
    <string name="overwrite_dialog_title">%s has already existed. Do you want to overwrite it?</string>
    <string name="preferences_title">Settings</string>
    <string name="pref_title_record_type">Record file type</string>
    <string name="prefDialogTitle_recordType">Please select file type</string>
    <string name="prefDefault_recordType">audio/3gpp</string>
    <string name="pref_title_enable_high_quality">Enable high quality</string>
    <string name="pref_summary_enable_high_quality">The audio file with high quality can be larger</string>
    <string name="pref_title_enable_sound_effect">Enable sound effect</string>
    <string name="pref_summary_enable_sound_effect">Playing sound effect when the state is changed</string>
    <string name="notification_recording">Recording...</string>
    <string name="notification_stopped">Recording is stopped</string>
    <string name="notification_warning">Low storage(less than %d minutes)...</string>
    <string name="sd_card_not_available">SD card is not available</string>
    <string name="open_file_explorer">Open file explorer</string>
    <string name="alert_message_delete_record">Do you want to delete selected record?</string>
    <string name="pref_title_use_calendar_events_for_naming">Use cal for naming</string>
    <string name="pref_summary_use_calendar_events_for_naming">Use calendar events for naming</string>
    <string name="choose_file_name">Choose file name</string>

    <string-array name="prefEntries_recordType">
        <item>amr</item>
        <item>3gpp</item>
    </string-array>
    <string-array translatable="false" name="prefValues_recordType">
        <item>audio/amr</item>
        <item>audio/3gpp</item>
    </string-array>
    <!-- add for libra end -->
</resources>
